micro_c/miniC.output
Terminals unused in grammar

    "register"


Grammar

    0 $accept: program $end

    1 $@1: ε

    2 $@2: ε

    3 program: $@1 "void" "identifier" "(" ")" "{" body "}" $@2

    4 body: body declaration
    5     | body statement
    6     | ε

    7 $@3: ε

    8 declaration: "var" $@3 tipo id_list ";"

    9 $@4: ε

   10 declaration: "const" $@4 tipo id_list ";"

   11 tipo: "int"

   12 id_list: id_decl
   13        | id_list "," id_decl

   14 id_decl: "identifier"
   15        | "identifier" "=" expression

   16 statement: "identifier" "=" expression ";"
   17          | "{" statement_list "}"
   18          | "if" "(" expression ")" statement "else" statement
   19          | "if" "(" expression ")" statement
   20          | "while" "(" expression ")" statement
   21          | "print" "(" print_list ")" ";"
   22          | "read" "(" read_list ")" ";"
   23          | error ";"

   24 statement_list: statement_list statement
   25               | ε

   26 print_list: print_item
   27           | print_list "," print_item

   28 print_item: expression
   29           | "string"

   30 read_list: "identifier"
   31          | read_list "," "identifier"

   32 expression: expression "+" expression
   33           | expression "-" expression
   34           | expression "*" expression
   35           | expression "/" expression
   36           | "-" expression
   37           | "(" expression ")"
   38           | "identifier"
   39           | "number"


Terminals, with rules where they appear

    $end (0) 0
    error (256) 23
    "+" (258) 32
    "-" (259) 33 36
    "*" (260) 34
    "/" (261) 35
    "number" <cadena> (262) 39
    "(" (263) 3 18 19 20 21 22 37
    ")" (264) 3 18 19 20 21 22 37
    ";" (265) 8 10 16 21 22 23
    "=" (266) 15 16
    "{" (267) 3 17
    "}" (268) 3 17
    "," (269) 13 27 31
    "register" <cadena> (270)
    "print" (271) 21
    "var" (272) 8
    "const" (273) 10
    "int" (274) 11
    "if" (275) 18 19
    "else" (276) 18
    "while" (277) 20
    "read" (278) 22
    "void" (279) 3
    "string" (280) 29
    "identifier" <cadena> (281) 3 14 15 16 30 31 38
    UMINUS (282)
    NOELSE (283)


Nonterminals, with rules where they appear

    $accept (29)
        on left: 0
    program (30)
        on left: 3
        on right: 0
    $@1 (31)
        on left: 1
        on right: 3
    $@2 (32)
        on left: 2
        on right: 3
    body (33)
        on left: 4 5 6
        on right: 3 4 5
    declaration (34)
        on left: 8 10
        on right: 4
    $@3 (35)
        on left: 7
        on right: 8
    $@4 (36)
        on left: 9
        on right: 10
    tipo (37)
        on left: 11
        on right: 8 10
    id_list (38)
        on left: 12 13
        on right: 8 10 13
    id_decl (39)
        on left: 14 15
        on right: 12 13
    statement (40)
        on left: 16 17 18 19 20 21 22 23
        on right: 5 18 19 20 24
    statement_list (41)
        on left: 24 25
        on right: 17 24
    print_list (42)
        on left: 26 27
        on right: 21 27
    print_item (43)
        on left: 28 29
        on right: 26 27
    read_list (44)
        on left: 30 31
        on right: 22 31
    expression <num> (45)
        on left: 32 33 34 35 36 37 38 39
        on right: 15 16 18 19 20 28 32 33 34 35 36 37


State 0

    0 $accept: • program $end

    $default  reduce using rule 1 ($@1)

    program  go to state 1
    $@1      go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    3 program: $@1 • "void" "identifier" "(" ")" "{" body "}" $@2

    "void"  shift, and go to state 4


State 3

    0 $accept: program $end •

    $default  accept


State 4

    3 program: $@1 "void" • "identifier" "(" ")" "{" body "}" $@2

    "identifier"  shift, and go to state 5


State 5

    3 program: $@1 "void" "identifier" • "(" ")" "{" body "}" $@2

    "("  shift, and go to state 6


State 6

    3 program: $@1 "void" "identifier" "(" • ")" "{" body "}" $@2

    ")"  shift, and go to state 7


State 7

    3 program: $@1 "void" "identifier" "(" ")" • "{" body "}" $@2

    "{"  shift, and go to state 8


State 8

    3 program: $@1 "void" "identifier" "(" ")" "{" • body "}" $@2

    $default  reduce using rule 6 (body)

    body  go to state 9


State 9

    3 program: $@1 "void" "identifier" "(" ")" "{" body • "}" $@2
    4 body: body • declaration
    5     | body • statement

    error         shift, and go to state 10
    "{"           shift, and go to state 11
    "}"           shift, and go to state 12
    "print"       shift, and go to state 13
    "var"         shift, and go to state 14
    "const"       shift, and go to state 15
    "if"          shift, and go to state 16
    "while"       shift, and go to state 17
    "read"        shift, and go to state 18
    "identifier"  shift, and go to state 19

    declaration  go to state 20
    statement    go to state 21


State 10

   23 statement: error • ";"

    ";"  shift, and go to state 22


State 11

   17 statement: "{" • statement_list "}"

    $default  reduce using rule 25 (statement_list)

    statement_list  go to state 23


State 12

    3 program: $@1 "void" "identifier" "(" ")" "{" body "}" • $@2

    $default  reduce using rule 2 ($@2)

    $@2  go to state 24


State 13

   21 statement: "print" • "(" print_list ")" ";"

    "("  shift, and go to state 25


State 14

    8 declaration: "var" • $@3 tipo id_list ";"

    $default  reduce using rule 7 ($@3)

    $@3  go to state 26


State 15

   10 declaration: "const" • $@4 tipo id_list ";"

    $default  reduce using rule 9 ($@4)

    $@4  go to state 27


State 16

   18 statement: "if" • "(" expression ")" statement "else" statement
   19          | "if" • "(" expression ")" statement

    "("  shift, and go to state 28


State 17

   20 statement: "while" • "(" expression ")" statement

    "("  shift, and go to state 29


State 18

   22 statement: "read" • "(" read_list ")" ";"

    "("  shift, and go to state 30


State 19

   16 statement: "identifier" • "=" expression ";"

    "="  shift, and go to state 31


State 20

    4 body: body declaration •

    $default  reduce using rule 4 (body)


State 21

    5 body: body statement •

    $default  reduce using rule 5 (body)


State 22

   23 statement: error ";" •

    $default  reduce using rule 23 (statement)


State 23

   17 statement: "{" statement_list • "}"
   24 statement_list: statement_list • statement

    error         shift, and go to state 10
    "{"           shift, and go to state 11
    "}"           shift, and go to state 32
    "print"       shift, and go to state 13
    "if"          shift, and go to state 16
    "while"       shift, and go to state 17
    "read"        shift, and go to state 18
    "identifier"  shift, and go to state 19

    statement  go to state 33


State 24

    3 program: $@1 "void" "identifier" "(" ")" "{" body "}" $@2 •

    $default  reduce using rule 3 (program)


State 25

   21 statement: "print" "(" • print_list ")" ";"

    "-"           shift, and go to state 34
    "number"      shift, and go to state 35
    "("           shift, and go to state 36
    "string"      shift, and go to state 37
    "identifier"  shift, and go to state 38

    print_list  go to state 39
    print_item  go to state 40
    expression  go to state 41


State 26

    8 declaration: "var" $@3 • tipo id_list ";"

    "int"  shift, and go to state 42

    tipo  go to state 43


State 27

   10 declaration: "const" $@4 • tipo id_list ";"

    "int"  shift, and go to state 42

    tipo  go to state 44


State 28

   18 statement: "if" "(" • expression ")" statement "else" statement
   19          | "if" "(" • expression ")" statement

    "-"           shift, and go to state 34
    "number"      shift, and go to state 35
    "("           shift, and go to state 36
    "identifier"  shift, and go to state 38

    expression  go to state 45


State 29

   20 statement: "while" "(" • expression ")" statement

    "-"           shift, and go to state 34
    "number"      shift, and go to state 35
    "("           shift, and go to state 36
    "identifier"  shift, and go to state 38

    expression  go to state 46


State 30

   22 statement: "read" "(" • read_list ")" ";"

    "identifier"  shift, and go to state 47

    read_list  go to state 48


State 31

   16 statement: "identifier" "=" • expression ";"

    "-"           shift, and go to state 34
    "number"      shift, and go to state 35
    "("           shift, and go to state 36
    "identifier"  shift, and go to state 38

    expression  go to state 49


State 32

   17 statement: "{" statement_list "}" •

    $default  reduce using rule 17 (statement)


State 33

   24 statement_list: statement_list statement •

    $default  reduce using rule 24 (statement_list)


State 34

   36 expression: "-" • expression

    "-"           shift, and go to state 34
    "number"      shift, and go to state 35
    "("           shift, and go to state 36
    "identifier"  shift, and go to state 38

    expression  go to state 50


State 35

   39 expression: "number" •

    $default  reduce using rule 39 (expression)


State 36

   37 expression: "(" • expression ")"

    "-"           shift, and go to state 34
    "number"      shift, and go to state 35
    "("           shift, and go to state 36
    "identifier"  shift, and go to state 38

    expression  go to state 51


State 37

   29 print_item: "string" •

    $default  reduce using rule 29 (print_item)


State 38

   38 expression: "identifier" •

    $default  reduce using rule 38 (expression)


State 39

   21 statement: "print" "(" print_list • ")" ";"
   27 print_list: print_list • "," print_item

    ")"  shift, and go to state 52
    ","  shift, and go to state 53


State 40

   26 print_list: print_item •

    $default  reduce using rule 26 (print_list)


State 41

   28 print_item: expression •
   32 expression: expression • "+" expression
   33           | expression • "-" expression
   34           | expression • "*" expression
   35           | expression • "/" expression

    "+"  shift, and go to state 54
    "-"  shift, and go to state 55
    "*"  shift, and go to state 56
    "/"  shift, and go to state 57

    $default  reduce using rule 28 (print_item)


State 42

   11 tipo: "int" •

    $default  reduce using rule 11 (tipo)


State 43

    8 declaration: "var" $@3 tipo • id_list ";"

    "identifier"  shift, and go to state 58

    id_list  go to state 59
    id_decl  go to state 60


State 44

   10 declaration: "const" $@4 tipo • id_list ";"

    "identifier"  shift, and go to state 58

    id_list  go to state 61
    id_decl  go to state 60


State 45

   18 statement: "if" "(" expression • ")" statement "else" statement
   19          | "if" "(" expression • ")" statement
   32 expression: expression • "+" expression
   33           | expression • "-" expression
   34           | expression • "*" expression
   35           | expression • "/" expression

    "+"  shift, and go to state 54
    "-"  shift, and go to state 55
    "*"  shift, and go to state 56
    "/"  shift, and go to state 57
    ")"  shift, and go to state 62


State 46

   20 statement: "while" "(" expression • ")" statement
   32 expression: expression • "+" expression
   33           | expression • "-" expression
   34           | expression • "*" expression
   35           | expression • "/" expression

    "+"  shift, and go to state 54
    "-"  shift, and go to state 55
    "*"  shift, and go to state 56
    "/"  shift, and go to state 57
    ")"  shift, and go to state 63


State 47

   30 read_list: "identifier" •

    $default  reduce using rule 30 (read_list)


State 48

   22 statement: "read" "(" read_list • ")" ";"
   31 read_list: read_list • "," "identifier"

    ")"  shift, and go to state 64
    ","  shift, and go to state 65


State 49

   16 statement: "identifier" "=" expression • ";"
   32 expression: expression • "+" expression
   33           | expression • "-" expression
   34           | expression • "*" expression
   35           | expression • "/" expression

    "+"  shift, and go to state 54
    "-"  shift, and go to state 55
    "*"  shift, and go to state 56
    "/"  shift, and go to state 57
    ";"  shift, and go to state 66


State 50

   32 expression: expression • "+" expression
   33           | expression • "-" expression
   34           | expression • "*" expression
   35           | expression • "/" expression
   36           | "-" expression •

    $default  reduce using rule 36 (expression)


State 51

   32 expression: expression • "+" expression
   33           | expression • "-" expression
   34           | expression • "*" expression
   35           | expression • "/" expression
   37           | "(" expression • ")"

    "+"  shift, and go to state 54
    "-"  shift, and go to state 55
    "*"  shift, and go to state 56
    "/"  shift, and go to state 57
    ")"  shift, and go to state 67


State 52

   21 statement: "print" "(" print_list ")" • ";"

    ";"  shift, and go to state 68


State 53

   27 print_list: print_list "," • print_item

    "-"           shift, and go to state 34
    "number"      shift, and go to state 35
    "("           shift, and go to state 36
    "string"      shift, and go to state 37
    "identifier"  shift, and go to state 38

    print_item  go to state 69
    expression  go to state 41


State 54

   32 expression: expression "+" • expression

    "-"           shift, and go to state 34
    "number"      shift, and go to state 35
    "("           shift, and go to state 36
    "identifier"  shift, and go to state 38

    expression  go to state 70


State 55

   33 expression: expression "-" • expression

    "-"           shift, and go to state 34
    "number"      shift, and go to state 35
    "("           shift, and go to state 36
    "identifier"  shift, and go to state 38

    expression  go to state 71


State 56

   34 expression: expression "*" • expression

    "-"           shift, and go to state 34
    "number"      shift, and go to state 35
    "("           shift, and go to state 36
    "identifier"  shift, and go to state 38

    expression  go to state 72


State 57

   35 expression: expression "/" • expression

    "-"           shift, and go to state 34
    "number"      shift, and go to state 35
    "("           shift, and go to state 36
    "identifier"  shift, and go to state 38

    expression  go to state 73


State 58

   14 id_decl: "identifier" •
   15        | "identifier" • "=" expression

    "="  shift, and go to state 74

    $default  reduce using rule 14 (id_decl)


State 59

    8 declaration: "var" $@3 tipo id_list • ";"
   13 id_list: id_list • "," id_decl

    ";"  shift, and go to state 75
    ","  shift, and go to state 76


State 60

   12 id_list: id_decl •

    $default  reduce using rule 12 (id_list)


State 61

   10 declaration: "const" $@4 tipo id_list • ";"
   13 id_list: id_list • "," id_decl

    ";"  shift, and go to state 77
    ","  shift, and go to state 76


State 62

   18 statement: "if" "(" expression ")" • statement "else" statement
   19          | "if" "(" expression ")" • statement

    error         shift, and go to state 10
    "{"           shift, and go to state 11
    "print"       shift, and go to state 13
    "if"          shift, and go to state 16
    "while"       shift, and go to state 17
    "read"        shift, and go to state 18
    "identifier"  shift, and go to state 19

    statement  go to state 78


State 63

   20 statement: "while" "(" expression ")" • statement

    error         shift, and go to state 10
    "{"           shift, and go to state 11
    "print"       shift, and go to state 13
    "if"          shift, and go to state 16
    "while"       shift, and go to state 17
    "read"        shift, and go to state 18
    "identifier"  shift, and go to state 19

    statement  go to state 79


State 64

   22 statement: "read" "(" read_list ")" • ";"

    ";"  shift, and go to state 80


State 65

   31 read_list: read_list "," • "identifier"

    "identifier"  shift, and go to state 81


State 66

   16 statement: "identifier" "=" expression ";" •

    $default  reduce using rule 16 (statement)


State 67

   37 expression: "(" expression ")" •

    $default  reduce using rule 37 (expression)


State 68

   21 statement: "print" "(" print_list ")" ";" •

    $default  reduce using rule 21 (statement)


State 69

   27 print_list: print_list "," print_item •

    $default  reduce using rule 27 (print_list)


State 70

   32 expression: expression • "+" expression
   32           | expression "+" expression •
   33           | expression • "-" expression
   34           | expression • "*" expression
   35           | expression • "/" expression

    "*"  shift, and go to state 56
    "/"  shift, and go to state 57

    $default  reduce using rule 32 (expression)


State 71

   32 expression: expression • "+" expression
   33           | expression • "-" expression
   33           | expression "-" expression •
   34           | expression • "*" expression
   35           | expression • "/" expression

    "*"  shift, and go to state 56
    "/"  shift, and go to state 57

    $default  reduce using rule 33 (expression)


State 72

   32 expression: expression • "+" expression
   33           | expression • "-" expression
   34           | expression • "*" expression
   34           | expression "*" expression •
   35           | expression • "/" expression

    $default  reduce using rule 34 (expression)


State 73

   32 expression: expression • "+" expression
   33           | expression • "-" expression
   34           | expression • "*" expression
   35           | expression • "/" expression
   35           | expression "/" expression •

    $default  reduce using rule 35 (expression)


State 74

   15 id_decl: "identifier" "=" • expression

    "-"           shift, and go to state 34
    "number"      shift, and go to state 35
    "("           shift, and go to state 36
    "identifier"  shift, and go to state 38

    expression  go to state 82


State 75

    8 declaration: "var" $@3 tipo id_list ";" •

    $default  reduce using rule 8 (declaration)


State 76

   13 id_list: id_list "," • id_decl

    "identifier"  shift, and go to state 58

    id_decl  go to state 83


State 77

   10 declaration: "const" $@4 tipo id_list ";" •

    $default  reduce using rule 10 (declaration)


State 78

   18 statement: "if" "(" expression ")" statement • "else" statement
   19          | "if" "(" expression ")" statement •

    "else"  shift, and go to state 84

    $default  reduce using rule 19 (statement)


State 79

   20 statement: "while" "(" expression ")" statement •

    $default  reduce using rule 20 (statement)


State 80

   22 statement: "read" "(" read_list ")" ";" •

    $default  reduce using rule 22 (statement)


State 81

   31 read_list: read_list "," "identifier" •

    $default  reduce using rule 31 (read_list)


State 82

   15 id_decl: "identifier" "=" expression •
   32 expression: expression • "+" expression
   33           | expression • "-" expression
   34           | expression • "*" expression
   35           | expression • "/" expression

    "+"  shift, and go to state 54
    "-"  shift, and go to state 55
    "*"  shift, and go to state 56
    "/"  shift, and go to state 57

    $default  reduce using rule 15 (id_decl)


State 83

   13 id_list: id_list "," id_decl •

    $default  reduce using rule 13 (id_list)


State 84

   18 statement: "if" "(" expression ")" statement "else" • statement

    error         shift, and go to state 10
    "{"           shift, and go to state 11
    "print"       shift, and go to state 13
    "if"          shift, and go to state 16
    "while"       shift, and go to state 17
    "read"        shift, and go to state 18
    "identifier"  shift, and go to state 19

    statement  go to state 85


State 85

   18 statement: "if" "(" expression ")" statement "else" statement •

    $default  reduce using rule 18 (statement)
